merger sear route with get all, update doc and generate docker env
